# publer-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml  requirements.txt
docs/: MIGRATION_GUIDE.md  README.md
publer_mcp/: __init__.py  auth.py  client.py  registry.py  server.py  settings.py  utils.py
publer_mcp/tools/: __init__.py  account.py  bulk.py  monitoring.py  optimization.py  scheduling.py
publer_mcp/utils/: __init__.py  content_parser.py  job_tracker.py  time_optimizer.py
scripts/: dev_setup.sh  local_run.py
src/publer_mcp/: __init__.py  server.py
src/publer_mcp/client/: __init__.py  api.py  auth.py  models.py
src/publer_mcp/tools/: __init__.py  accounts.py  analytics.py  media.py  posts.py
src/publer_mcp/utils/: __init__.py  errors.py
tests/: __init__.py  test_client.py  test_server.py  test_tools.py  test_workspace_id_parameter.py
