[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "publer-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Publer social media management platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Spinnable AI", email = "hello@getspinnable.ai" },
]
keywords = ["mcp", "publer", "social-media", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
publer-mcp = "publer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/publer_mcp"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=publer_mcp --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100